--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>prometheus_mission</name>
-  <version>1.1.1</version>
+  <version>1.1.2</version>
   <description>
     The prometheus_mission package
   </description>
@@ -10,7 +10,7 @@
   <author email="fatmoonqyp@126.com">Yuhua Qi</author>
   <license>Apache</license>
 
-  <url type="website">http://www.amovauto.com/</url>
+  <url type="website">http://www.amovlab.com/</url>
   <url type="repository">https://github.com/HuaYuXiao/prometheus_mission.git</url>
 
   <buildtool_depend>catkin</buildtool_depend>
