--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,19 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  message_generation  
   roscpp
-  geometry_msgs
-  sensor_msgs
-  mavros
+        mavros
+        std_srvs
+        tf2_ros
+        tf2_eigen
   nav_msgs
   std_msgs
-  std_srvs
-  tf2_ros
-  tf2_eigen
+        geometry_msgs
+        sensor_msgs
   mavros_msgs
   prometheus_msgs
         quadrotor_msgs
+        message_generation
 )
 ##  System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
@@ -36,6 +36,10 @@ generate_messages(
   geometry_msgs 
   sensor_msgs
   std_msgs
+        mavros_msgs
+        prometheus_msgs
+        quadrotor_msgs
+        nav_msgs
 )
 
 catkin_package(
@@ -50,7 +54,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
   include
-  autonomous_landing
+#  autonomous_landing
   ${catkin_INCLUDE_DIRS}
   $ENV{HOME}/Prometheus/Modules/common/include
         $ENV{HOME}/Prometheus/Modules/uav_control/include
@@ -59,37 +63,37 @@ include_directories(
 ###############################
 ##      声明可执行cpp文件     ##
 ###############################
-add_executable(gimbal_control_circle gimbal_control/gimbal_control_circle.cpp)
-add_dependencies(gimbal_control_circle prometheus_mission_gencpp)
-target_link_libraries(gimbal_control_circle ${catkin_LIBRARIES})
-
-add_executable(gimbal_control_demo gimbal_control/gimbal_control_demo.cpp)
-add_dependencies(gimbal_control_demo prometheus_mission_gencpp)
-target_link_libraries(gimbal_control_demo ${catkin_LIBRARIES})
-
-add_executable(gimbal_control gimbal_control/gimbal_control.cpp)
-add_dependencies(gimbal_control prometheus_mission_gencpp)
-target_link_libraries(gimbal_control ${catkin_LIBRARIES})
-
-add_executable(gimbal_control_vel gimbal_control/gimbal_control_vel.cpp)
-add_dependencies(gimbal_control_vel prometheus_mission_gencpp)
-target_link_libraries(gimbal_control_vel ${catkin_LIBRARIES})
-
-add_executable(pad_tracking test/pad_tracking.cpp)
-add_dependencies(pad_tracking prometheus_mission_gencpp)
-target_link_libraries(pad_tracking ${catkin_LIBRARIES})
+#add_executable(gimbal_control_circle gimbal_control/gimbal_control_circle.cpp)
+#add_dependencies(gimbal_control_circle prometheus_mission_gencpp)
+#target_link_libraries(gimbal_control_circle ${catkin_LIBRARIES})
+#
+#add_executable(gimbal_control_demo gimbal_control/gimbal_control_demo.cpp)
+#add_dependencies(gimbal_control_demo prometheus_mission_gencpp)
+#target_link_libraries(gimbal_control_demo ${catkin_LIBRARIES})
+#
+#add_executable(gimbal_control gimbal_control/gimbal_control.cpp)
+#add_dependencies(gimbal_control prometheus_mission_gencpp)
+#target_link_libraries(gimbal_control ${catkin_LIBRARIES})
+#
+#add_executable(gimbal_control_vel gimbal_control/gimbal_control_vel.cpp)
+#add_dependencies(gimbal_control_vel prometheus_mission_gencpp)
+#target_link_libraries(gimbal_control_vel ${catkin_LIBRARIES})
+#
+#add_executable(pad_tracking test/pad_tracking.cpp)
+#add_dependencies(pad_tracking prometheus_mission_gencpp)
+#target_link_libraries(pad_tracking ${catkin_LIBRARIES})
 
 add_executable(mission_cmd_pub test/mission_cmd_pub.cpp)
 add_dependencies(mission_cmd_pub prometheus_mission_gencpp)
 target_link_libraries(mission_cmd_pub ${catkin_LIBRARIES})
 
-add_executable(turtlebot_formation formation_flight/turtlebot_formation.cpp)
-add_dependencies(turtlebot_formation prometheus_mission_gencpp)
-target_link_libraries(turtlebot_formation ${catkin_LIBRARIES})
-
-add_executable(circle_crossing circle_crossing/circle_crossing.cpp)
-add_dependencies(circle_crossing prometheus_mission_gencpp)
-target_link_libraries(circle_crossing ${catkin_LIBRARIES})
+#add_executable(turtlebot_formation formation_flight/turtlebot_formation.cpp)
+#add_dependencies(turtlebot_formation prometheus_mission_gencpp)
+#target_link_libraries(turtlebot_formation ${catkin_LIBRARIES})
+#
+#add_executable(circle_crossing circle_crossing/circle_crossing.cpp)
+#add_dependencies(circle_crossing prometheus_mission_gencpp)
+#target_link_libraries(circle_crossing ${catkin_LIBRARIES})
 
 #add_executable(turtlebot_follow formation_flight/turtlebot_follow.cpp)
 #add_dependencies(turtlebot_follow prometheus_mission_gencpp)
@@ -107,17 +111,17 @@ add_executable(waypoint_tracking waypoint_tracking/waypoint_tracking.cpp)
 add_dependencies(waypoint_tracking prometheus_mission_gencpp)
 target_link_libraries(waypoint_tracking ${catkin_LIBRARIES})
 
-add_executable(autonomous_landing autonomous_landing/autonomous_landing.cpp)
-add_dependencies(autonomous_landing prometheus_mission_gencpp)
-target_link_libraries(autonomous_landing ${catkin_LIBRARIES})
-
-add_executable(autonomous_landing_aruco autonomous_landing/autonomous_landing_aruco.cpp)
-add_dependencies(autonomous_landing_aruco prometheus_mission_gencpp)
-target_link_libraries(autonomous_landing_aruco ${catkin_LIBRARIES})
-
-add_executable(object_tracking object_tracking/object_tracking.cpp)
-add_dependencies(object_tracking prometheus_mission_gencpp)
-target_link_libraries(object_tracking ${catkin_LIBRARIES})
+#add_executable(autonomous_landing autonomous_landing/autonomous_landing.cpp)
+#add_dependencies(autonomous_landing prometheus_mission_gencpp)
+#target_link_libraries(autonomous_landing ${catkin_LIBRARIES})
+#
+#add_executable(autonomous_landing_aruco autonomous_landing/autonomous_landing_aruco.cpp)
+#add_dependencies(autonomous_landing_aruco prometheus_mission_gencpp)
+#target_link_libraries(autonomous_landing_aruco ${catkin_LIBRARIES})
+#
+#add_executable(object_tracking object_tracking/object_tracking.cpp)
+#add_dependencies(object_tracking prometheus_mission_gencpp)
+#target_link_libraries(object_tracking ${catkin_LIBRARIES})
 
 #add_executable(indoor_competition indoor_competition/indoor_competition.cpp)
 #add_dependencies(indoor_competition prometheus_mission_gencpp)
@@ -127,33 +131,33 @@ target_link_libraries(object_tracking ${catkin_LIBRARIES})
 #add_dependencies(fake_detectioninfo prometheus_mission_gencpp)
 #target_link_libraries(fake_detectioninfo ${catkin_LIBRARIES})
 
-add_executable(formation_getpose formation/formation_getpose.cpp)
-add_dependencies(formation_getpose prometheus_mission_gencpp)
-target_link_libraries(formation_getpose ${catkin_LIBRARIES})
-
-add_executable(formation_state formation/formation_state.cpp)
-add_dependencies(formation_state prometheus_mission_gencpp)
-target_link_libraries(formation_state ${catkin_LIBRARIES})
-
-add_executable(formation_move formation/formation_move.cpp)
-add_dependencies(formation_move prometheus_mission_gencpp)
-target_link_libraries(formation_move ${catkin_LIBRARIES})
-
-add_executable(formation_change formation/formation_change.cpp)
-add_dependencies(formation_change prometheus_mission_gencpp)
-target_link_libraries(formation_change ${catkin_LIBRARIES})
-
-add_executable(formation_setmode formation/formation_setmode.cpp)
-add_dependencies(formation_setmode prometheus_mission_gencpp)
-target_link_libraries(formation_setmode ${catkin_LIBRARIES})
-
-add_executable(formation_control formation/formation_control.cpp)
-add_dependencies(formation_control prometheus_mission_gencpp)
-target_link_libraries(formation_control ${catkin_LIBRARIES})
-
-add_executable(formation_square formation/formation_square.cpp)
-add_dependencies(formation_square prometheus_mission_gencpp)
-target_link_libraries(formation_square ${catkin_LIBRARIES})
+#add_executable(formation_getpose formation/formation_getpose.cpp)
+#add_dependencies(formation_getpose prometheus_mission_gencpp)
+#target_link_libraries(formation_getpose ${catkin_LIBRARIES})
+#
+#add_executable(formation_state formation/formation_state.cpp)
+#add_dependencies(formation_state prometheus_mission_gencpp)
+#target_link_libraries(formation_state ${catkin_LIBRARIES})
+#
+#add_executable(formation_move formation/formation_move.cpp)
+#add_dependencies(formation_move prometheus_mission_gencpp)
+#target_link_libraries(formation_move ${catkin_LIBRARIES})
+#
+#add_executable(formation_change formation/formation_change.cpp)
+#add_dependencies(formation_change prometheus_mission_gencpp)
+#target_link_libraries(formation_change ${catkin_LIBRARIES})
+#
+#add_executable(formation_setmode formation/formation_setmode.cpp)
+#add_dependencies(formation_setmode prometheus_mission_gencpp)
+#target_link_libraries(formation_setmode ${catkin_LIBRARIES})
+#
+#add_executable(formation_control formation/formation_control.cpp)
+#add_dependencies(formation_control prometheus_mission_gencpp)
+#target_link_libraries(formation_control ${catkin_LIBRARIES})
+#
+#add_executable(formation_square formation/formation_square.cpp)
+#add_dependencies(formation_square prometheus_mission_gencpp)
+#target_link_libraries(formation_square ${catkin_LIBRARIES})
 
 add_executable(pub_goal_from_qgc planning_mission/pub_goal_from_qgc.cpp)
 add_dependencies(pub_goal_from_qgc prometheus_mission_gencpp)
