--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>prometheus_mission</name>
-  <version>1.2.0</version>
+  <version>1.2.1</version>
   <description>
     The prometheus_mission package
   </description>
@@ -15,16 +15,12 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>std_msgs</depend>
+  <depend>quadrotor_msgs</depend>
+
   <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>quadrotor_msgs</build_depend>
 
   <exec_depend>message_runtime</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-    <exec_depend>quadrotor_msgs</exec_depend>
-
-  <build_export_depend>std_msgs</build_export_depend>
-    <build_export_depend>quadrotor_msgs</build_export_depend>
 
   <export>
 
